# GCIDE-CLI

./: CHANGELOG.md  CMakeLists.txt  README.md
man/: CMakeLists.txt  gcide-cli.1
src/: .clang-format  CMakeLists.txt  config.h.in  dictionary_entry.cc  dictionary_entry.h  dictionary_reader.cc  dictionary_reader.h  main.cc  options.cc  options.h  util.cc  util.h  word_gathering.cc  word_gathering.h  xml.cc  xml.h
